--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,11 +1,11 @@
 <div class="container my-4">
     <div class="row">
         <div class="col-sm">
-            One of three columns
-
+            <div id="chartdiv"></div>
         </div>
         <div class="col-sm">
             One of three columns
         </div>
     </div>
+    
 </div>
