--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,8 +69,8 @@
                 </div>
                 <div class="menu-wrapper">
                   <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link active" href="#"><span>Report</span><span class="sr-only">home</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span>link 2</span></a></li>
+                    <li class="nav-item active"><a class="nav-link active" href="#"><span>Mappa</span><span class="sr-only">home</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><span>Come fare per?</span></a></li>
 
                   </ul>
                 </div>
