--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,11 +1,41 @@
-<div class="container my-4">
+<div class="container my-1">
+
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm-5">
+            <h4>Casi per regione</h4>
             <div id="chartdiv"></div>
         </div>
-        <div class="col-sm">
-            One of three columns
+        <div class="col-sm-2">
+            <h4>Numeri</h4>
+            <p class="lead">
+                {{detailValue.denominazione_regione}}
+                <button type="button" class="close" aria-label="Close" (click)="closeButton()" [hidden]="!showCloseButton">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </p>
+            
+            Totale casi: <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_casi}}</span><br/>
+            Tamponi: <span class="badge badge-primary badge-pill float-right">{{detailValue.tamponi}}</span><br/>
+            Dimessi guariti: <span class="badge badge-primary badge-pill float-right">{{detailValue.dimessi_guariti}} </span><br/>
+            Terapia intensiva: <span class="badge badge-primary badge-pill float-right">{{detailValue.terapia_intensiva}} </span><br/>
+            Ricoverati: <span class="badge badge-primary badge-pill float-right">{{detailValue.ricoverati_con_sintomi}} </span><br/>
+            Isolamento: <span class="badge badge-primary badge-pill float-right">{{detailValue.isolamento_domiciliare}} </span><br/>
+            Deceduti: <span class="badge badge-primary badge-pill float-right">{{detailValue.deceduti}} </span><br/>
+            
+        </div>
+        
+        <div class="col-sm-5">
+            <h4>Andamento giornaliero</h4>
+            <div id="linearchart"></div>
         </div>
     </div>
-    
+    <div class="row">
+        <div class="float-left">Ultimo aggiornamento: {{lastUpdate}}</div>
+    </div>
+</div>
+
+<div class="container my-2">
+    <div class="row">
+        <h4>Come fare per?</h4>
+    </div>
 </div>
