--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,27 +21,15 @@
                 <div class="it-socials d-none d-md-flex">
                   <span>Seguici su</span>
                   <ul>
+                    
                     <li>
-                      <a href="#" aria-label="Facebook" target="_blank">
-                        <svg class="icon">
-                          <use xlink:href="assets/sprite.svg#it-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#" aria-label="Github" target="_blank">
+                      <a href="https://github.com/grausof/coviditaly" aria-label="Github" target="_blank">
                         <svg class="icon">
                           <use xlink:href="assets/sprite.svg#it-github"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
-                      <a href="#" target="_blank" aria-label="Twitter">
-                        <svg class="icon">
-                          <use xlink:href="assets/sprite.svg#it-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
+                    
                   </ul>
                 </div>
                 
