--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,8 @@
                     <use xlink:href="assets/sprite.svg#it-plus-circle"></use>
                   </svg>
                   <div class="it-brand-text">
-                    <h2 class="no_toc">CovidItaly</h2>
-                    <h3 class="no_toc d-none d-md-block">Italia 2020</h3>
+                    <h2 class="no_toc">Nuovo coronavirus</h2>
+                    <h3 class="no_toc d-none d-md-block">#iorestoacasa</h3>
                   </div>
                 </a>
               </div>
@@ -55,13 +55,15 @@
                 <div class="close-div sr-only">
                   <button class="btn close-menu" type="button"><span class="it-close"></span>close</button>
                 </div>
+                <!--
                 <div class="menu-wrapper">
                   <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link active" href="#"><span>Mappa</span><span class="sr-only">home</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span>Come fare per?</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><span>Domande comuni</span></a></li>
 
                   </ul>
                 </div>
+                -->
 
               </div>
             </nav>
@@ -74,3 +76,20 @@
 <router-outlet></router-outlet>
 
 
+
+<footer class="it-footer">
+  <div class="it-footer-main">
+    <div class="container">
+      <section>
+        <div class="row clearfix">
+          <div class="col-sm-12">
+            <p>....</p>
+          </div>
+        </div>
+      </section>
+      
+   
+    </div>
+  </div>
+  
+</footer>
