--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -34,8 +34,72 @@
     </div>
 </div>
 
+
 <div class="container my-2">
+    
     <div class="row">
-        <h4>Come fare per?</h4>
+        <div class="col-sm-4">
+            <div class="card-wrapper card-space">
+                <div class="card card-bg card-big">
+                    <div class="card-body">
+                        <div class="top-icon">
+                            <svg class="icon">
+                            <use xlink:href="../assets/sprite.svg#it-comment"></use>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Come fare per?</h5>
+                        <p class="card-text">Scopri tutte le risposte alle domande più comuni</p>
+                        <a class="read-more" target="blank" href="http://www.governo.it/it/articolo/decreto-iorestoacasa-domande-frequenti-sulle-misure-adottate-dal-governo/14278">
+                            <span class="text">Leggi di più</span>
+                            <svg class="icon">
+                            <use xlink:href="../assets/sprite.svg#it-arrow-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card-wrapper card-space">
+                <div class="card card-bg card-big">
+                    <div class="card-body">
+                        <div class="top-icon">
+                            <svg class="icon">
+                            <use xlink:href="../assets/sprite.svg#it-info-circle"></use>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Raccomandazioni</h5>
+                        <p class="card-text">Lava spesso le mani, non toccare occhi, naso e bocca, evita contatti ravvicinati e luoghi affollati.</p>
+                        <a class="read-more" target="blank" href="http://www.salute.gov.it/imgs/C_17_opuscoliPoster_443_allegato.pdf">
+                            <span class="text">Leggi di più</span>
+                            <svg class="icon">
+                            <use xlink:href="../assets/sprite.svg#it-arrow-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card-wrapper card-space">
+                <div class="card card-bg card-big">
+                    <div class="card-body">
+                        <div class="top-icon">
+                            <svg class="icon">
+                            <use xlink:href="../assets/sprite.svg#it-help-circle"></use>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Dubbi?</h5>
+                        <p class="card-text">Cosa fare in caso di sintomi, febbre, difficoltà respiratorie e dove fare il test.</p>
+                        <a class="read-more" target="blank" href="http://www.salute.gov.it/imgs/C_17_opuscoliPoster_444_allegato.pdf">
+                            <span class="text">Leggi di più</span>
+                            <svg class="icon">
+                            <use xlink:href="../assets/sprite.svg#it-arrow-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
