--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,7 +83,9 @@
       <section>
         <div class="row clearfix">
           <div class="col-sm-12">
-            <p>....</p>
+          <br>
+            <p>I dati sono prelevati tramite <a class="p-2 text-white"  href="https://github.com/pcm-dpc/COVID-19">api</a> messe a disposizione dal Dipartimento della Protezione Civile </p>
+            <p>Licenza: CC-BY-4.0</p>
           </div>
         </div>
       </section>
@@ -91,5 +93,6 @@
    
     </div>
   </div>
+
   
 </footer>
