--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,15 +55,15 @@
                 <div class="close-div sr-only">
                   <button class="btn close-menu" type="button"><span class="it-close"></span>close</button>
                 </div>
-                <!--
+            
                 <div class="menu-wrapper">
                   <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link active" href="#"><span>Mappa</span><span class="sr-only">home</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span>Domande comuni</span></a></li>
+                    <li class="nav-item"><a [routerLinkActiveOptions]="{ exact: true }" [routerLink]="['/']" routerLinkActive="active" class="nav-link"><span>Home</span></a></li>
+                    <li class="nav-item"><a [routerLinkActiveOptions]="{ exact: true }" [routerLink]="['/spesa']" routerLinkActive="active" class="nav-link" ><span>Spesa a domicilio</span></a></li>
 
                   </ul>
                 </div>
-                -->
+               
 
               </div>
             </nav>
