--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,8 @@
                     <use xlink:href="assets/sprite.svg#it-plus-circle"></use>
                   </svg>
                   <div class="it-brand-text">
-                    <h2 class="no_toc">Nuovo coronavirus</h2>
-                    <h3 class="no_toc d-none d-md-block">#iorestoacasa</h3>
+                    <h2 class="no_toc">#iorestoacasa</h2>
+                    <h3 class="no_toc d-none d-md-block">Nuovo coronavirus</h3>
                   </div>
                 </a>
               </div>
@@ -29,6 +29,7 @@
                         </svg>
                       </a>
                     </li>
+                    
                     
                   </ul>
                 </div>
@@ -85,7 +86,8 @@
           <div class="col-sm-12">
           <br>
             <p>I dati sono prelevati tramite <a class="p-2 text-white"  href="https://github.com/pcm-dpc/COVID-19">api</a> messe a disposizione dal Dipartimento della Protezione Civile </p>
-            <p>Licenza: CC-BY-4.0</p>
+            <p>Ciò che stiamo facendo è creare un servizio informazioni, aggiornato in tempo reale, relativo ad ospedali e supporto medico, attività produttive, servizi di approvvigionamento e molto altro. 
+            #iorestoacasa COVID-19</p>
           </div>
         </div>
       </section>
