--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -3,6 +3,10 @@
     <div class="row">
         <div class="col-sm-5">
             <h4>Casi per regione</h4>
+            <ul class="nav nav-tabs auto">
+                <li class="nav-item"><a [ngClass]="{'active': showRegion}" class="nav-link" href="#" (click)="switchToRegion()">Regioni</a></li>
+                <li class="nav-item"><a [ngClass]="{'active': !showRegion}" class="nav-link" href="#" (click)="switchToProv()">Province</a></li>
+            </ul>
             <div id="chartdiv"></div>
         </div>
         <div class="col-sm-2">
@@ -101,5 +105,11 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="container my-3">
+    
+    <div class="row">
+        
     </div>
 </div>
