--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,3 +98,16 @@
 
   
 </footer>
+<div class="cookiebar bg-dark p-4 hide" aria-hidden="true">
+  <div class="container">
+    <div class="row d-flex align-items-center">
+      <div class="col-12 col-md-6">
+        <span class="text-white small">Questo sito utilizza cookie tecnici, analytics e di terze parti: <a href="https://firebase.google.com/support/privacy">Firebase hosting</a> & <a href="https://support.google.com/analytics/answer/7318509?hl=it">Google Analytics</a><br>Proseguendo nella navigazione accetti l’utilizzo dei cookie.</span>
+      </div>
+      <div class="col-12 col-md-6 mt-4 mt-md-0 d-flex justify-content-end">
+        
+        <button class="btn btn-primary mr-2" data-accept="cookiebar">Accetto</button>
+      </div>
+    </div>
+  </div>
+</div>
