--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,6 +88,7 @@
             <p>I dati sono prelevati tramite <a class="p-2 text-white"  href="https://github.com/pcm-dpc/COVID-19">api</a> messe a disposizione dal Dipartimento della Protezione Civile </p>
             <p>Ciò che stiamo facendo è creare un servizio informazioni, aggiornato in tempo reale, relativo ad ospedali e supporto medico, attività produttive, servizi di approvvigionamento e molto altro. 
             #iorestoacasa COVID-19</p>
+            <p>Collabora con noi: <a href="https://github.com/grausof/iorestoacasa" target="_blank">github</a> & <a href="https://join.slack.com/t/iorestoacasa/shared_invite/zt-cq04uaom-g0x4XaR1Ajw32sKP2reckg" target="_blank">slack</a></p>
           </div>
         </div>
       </section>
