Risolto problema dettaglio regione

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,6 +86,7 @@
         <div class="row clearfix">
           <div class="col-sm-12">
           <br>
+            <p><b>Questo non è un sito istituzionale!</b></p>
             <p>I dati sono prelevati tramite <a class="p-2 text-white"  href="https://github.com/pcm-dpc/COVID-19">api</a> messe a disposizione dal Dipartimento della Protezione Civile </p>
             <p>Ciò che stiamo facendo è creare un servizio informazioni, aggiornato in tempo reale, relativo ad ospedali e supporto medico, attività produttive, servizi di approvvigionamento e molto altro. 
             #iorestoacasa COVID-19</p>
