--- a/src/app/inserimento-attivita/inserimento-attivita.component.html
+++ b/src/app/inserimento-attivita/inserimento-attivita.component.html
@@ -1,1 +1,19 @@
-<p>inserimento-attivita works!</p>
+<div class="container my-1">
+    <div class="row">
+
+    <div class="col-sm-12">
+        <!--start card-->
+        <div class="card-wrapper">
+            <div class="card">
+                <div class="card-body">
+                <h5 class="card-title">In costruzione</h5>
+                
+                </div>
+            </div>
+        </div>
+        <!--end card-->
+
+        </div>
+    </div>
+
+</div>
