--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,6 +61,7 @@
                   <ul class="navbar-nav">
                     <li class="nav-item"><a [routerLinkActiveOptions]="{ exact: true }" [routerLink]="['/']" routerLinkActive="active" class="nav-link"><span>Home</span></a></li>
                     <li class="nav-item"><a [routerLinkActiveOptions]="{ exact: true }" [routerLink]="['/spesa']" routerLinkActive="active" class="nav-link" ><span>Spesa a domicilio</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.modulospostamento.it/index.html" target="_blank"><span>Modulo spostamento</span></a></li>
                     <li class="nav-item"><a [routerLinkActiveOptions]="{ exact: true }" [routerLink]="['/collabora']" routerLinkActive="active" class="nav-link" ><span>Collabora</span></a></li>
 
                   </ul>
