--- a/src/app/inserimento-attivita/inserimento-attivita.component.html
+++ b/src/app/inserimento-attivita/inserimento-attivita.component.html
@@ -1,33 +1,210 @@
 <div class="container my-1">
     <div class="row">
-
     <div class="col-sm-12">
         <!--start card-->
         <div class="card-wrapper">
             <div class="card">
                 <div class="card-body">
-                <h5 class="card-title">In costruzione</h5>
-                <form novalidate #form="ngForm">
+                <form [hidden]="submitted" class="needs-validation" name="form" #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()" novalidate>
                     <div class="form-row">
-                        <div class="col-md-4 mb-2">
-                        <label for="name">Nome</label>
-                        <input type="text"
-                            class="form-control"
-                            id="name"
-                            name="name"
-                            placeholder="Inserisci il tuo nome"
-                            [(ngModel)]="model.name">
+                        <div class="form-group col-md-6">
+                        <input required [(ngModel)]="model.name" type="text" class="form-control" name="name" id="inputName" placeholder="inserisci nome attività">
+                        <label for="inputName">Nome attività</label>
+                        </div>
+                        <div class="form-group col-md-6">
+                        <div class="bootstrap-select-wrapper">
+                            <label>Categoria</label>
+                            <select required title="Scegli la categoria" [(ngModel)]="model.category" name="category">
+                            <option value="Farmacia">Farmacia</option>
+                            <option value="Parafarmacia">Parafarmacia</option>
+                            <option value="Gastronomia">Gastronomia</option>
+                            <option value="Supermercato">Supermercato</option>
+                            <option value="Ferramenta">Ferramenta</option>
+                            <option value="Edicola">Edicola/Libreria</option>
+                            <option value="ProdottiAnimali">Prodotti per animali</option>
+                            </select>
+                        </div>
                         </div>
                     </div>
+                    <div class="form-row">
+                        <div class="form-group col">
+                        <input required type="text" class="form-control" id="inputDesc" [(ngModel)]="model.description" name="description">
+                        <label for="inputDesc">Descrizione</label>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                        <input required type="email" name="email" [(ngModel)]="model.email" class="form-control" id="inputEmail4">
+                        <label for="inputEmail4">Email</label>
+                        </div>
+                        <div class="form-group col-md-4">
+                        <input required type="text" name="phone" [(ngModel)]="model.phone" class="form-control" id="inputTel" >
+                        <label for="inputTel">Numero di telefono</label>
+                        </div>
+                        <div class="form-group col-md-4">
+                        <input required type="text" name="website" [(ngModel)]="model.website" class="form-control" id="inputWeb" >
+                        <label for="inputWeb">Sito web</label>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col">
+                        <input required type="text" class="form-control" id="inputAddress" [(ngModel)]="model.address" name="address">
+                        <label for="inputAddress">Indirizzo</label>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                        <input required type="text" class="form-control" id="inputCity" [(ngModel)]="model.city" name="city">
+                        <label for="inputCity">Comune</label>
+                        </div>
+                        <div class="form-group col-md-2">
+                        <input required type="text" class="form-control" id="inputCAP" [(ngModel)]="model.cap" name="cap">
+                        <label for="inputCAP">CAP</label>
+                        </div>
+                        <div class="col-md-4">
+                        <div class="bootstrap-select-wrapper">
+                            <label>Provincia</label>
+                            <select required title="Scegli un'opzione" [(ngModel)]="model.prov" name="prov">
+                            <option value="AG">Agrigento</option>
+                            <option value="AL">Alessandria </option>
+                            <option value="AN">Ancona </option>
+                            <option value="AO">Aosta </option>
+                            <option value="AQ">Aquila </option>
+                            <option value="AR">Arezzo </option>
+                            <option value="AP">Ascoli-Piceno</option>
+                            <option value="AT">Asti </option>
+                            <option value="AV">Avellino </option>
+                            <option value="BA">Bari </option>
+                            <option value="BT">Barletta-Andria-Trani </option>
+                            <option value="BL">Belluno </option>
+                            <option value="BN">Benevento </option>
+                            <option value="BG">Bergamo </option>
+                            <option value="BI">Biella </option>
+                            <option value="BO">Bologna </option>
+                            <option value="BZ">Bolzano </option>
+                            <option value="BS">Brescia </option>
+                            <option value="BR">Brindisi </option>
+                            <option value="CA">Cagliari </option>
+                            <option value="CL">Caltanissetta</option>
+                            <option value="CB">Campobasso </option>
+                            <option value="CI">Carbonia Iglesias </option>
+                            <option value="CE">Caserta </option>
+                            <option value="CT">Catania </option>
+                            <option value="CZ">Catanzaro </option>
+                            <option value="CH">Chieti</option>
+                            <option value="CO">Como </option>
+                            <option value="CS">Cosenza </option>
+                            <option value="CR">Cremona </option>
+                            <option value="KR">Crotone </option>
+                            <option value="CN">Cuneo </option>
+                            <option value="EN">Enna </option>
+                            <option value="FM">Fermo </option>
+                            <option value="FE">Ferrara </option>
+                            <option value="FI">Firenze </option>
+                            <option value="FG">Foggia </option>
+                            <option value="FC">Forli-Cesena </option>
+                            <option value="FR">Frosinone </option>
+                            <option value="GE">Genova </option>
+                            <option value="GO">Gorizia </option>
+                            <option value="GR">Grosseto</option>
+                            <option value="IM">Imperia </option>
+                            <option value="IS">Isernia </option>
+                            <option value="SP">La-Spezia </option>
+                            <option value="LT">Latina </option>
+                            <option value="LE">Lecce </option>
+                            <option value="LC">Lecco </option>
+                            <option value="LI">Livorno </option>
+                            <option value="LO">Lodi</option>
+                            <option value="LU">Lucca </option>
+                            <option value="MC">Macerata </option>
+                            <option value="MN">Mantova </option>
+                            <option value="MS">Massa-Carrara </option>
+                            <option value="MT">Matera </option>
+                            <option value="VS">Medio Campidano </option>
+                            <option value="ME">Messina </option>
+                            <option value="MI">Milano </option>
+                            <option value="MO">Modena </option>
+                            <option value="MB">Monza-Brianza </option>
+                            <option value="NA">Napoli </option>
+                            <option value="NO">Novara </option>
+                            <option value="NU">Nuoro </option>
+                            <option value="OG">Ogliastra</option>
+                            <option value="OT">Olbia Tempio </option>
+                            <option value="OR">Oristano </option>
+                            <option value="PD">Padova </option>
+                            <option value="PA">Palermo </option>
+                            <option value="PR">Parma </option>
+                            <option value="PV">Pavia </option>
+                            <option value="PG">Perugia </option>
+                            <option value="PU">Pesaro-Urbino </option>
+                            <option value="PE">Pescara </option>
+                            <option value="PC">Piacenza </option>
+                            <option value="PI">Pisa </option>
+                            <option value="PT">Pistoia </option>
+                            <option value="PN">Pordenone </option>
+                            <option value="PZ">Potenza</option>
+                            <option value="PO">Prato </option>
+                            <option value="RG">Ragusa </option>
+                            <option value="RA">Ravenna </option>
+                            <option value="RC">Reggio-Calabria </option>
+                            <option value="RE">Reggio-Emilia </option>
+                            <option value="RI">Rieti </option>
+                            <option value="RN">Rimini</option>
+                            <option value="RM">Roma </option>
+                            <option value="RO">Rovigo </option>
+                            <option value="SA">Salerno </option>
+                            <option value="SS">Sassari </option>
+                            <option value="SV">Savona </option>
+                            <option value="SI">Siena </option>
+                            <option value="SR">Siracusa </option>
+                            <option value="SO">Sondrio</option>
+                            <option value="TA">Taranto </option>
+                            <option value="TE">Teramo </option>
+                            <option value="TR">Terni </option>
+                            <option value="TO">Torino </option>
+                            <option value="TP">Trapani </option>
+                            <option value="TN">Trento </option>
+                            <option value="TV">Treviso </option>
+                            <option value="TS">Trieste</option>
+                            <option value="UD">Udine </option>
+                            <option value="VA">Varese </option>
+                            <option value="VE">Venezia </option>
+                            <option value="VB">Verbania </option>
+                            <option value="VC">Vercelli </option>
+                            <option value="VR">Verona </option>
+                            <option value="VV">Vibo-Valentia</option>
+                            <option value="VI">Vicenza </option>
+                            <option value="VT">Viterbo</option>
+                            </select>
+                        </div>
+                        </div>
+                    </div>
+                    
+                    <div class="form-row">
+                        <div class="form-group col text-center">
+                        <button type="reset" class="btn btn-outline-primary">Annulla</button>
+                        <button type="submit" class="btn btn-primary">Conferma</button>
+                        </div>
+                    </div>
+
                 </form>
-                <pre><code>{{ form.value | json }}</code></pre>
-                <pre><code>{{ model | json }}</code></pre>
+                <div [hidden]="!submitted">
+                    <div [hidden]="error" class="alert alert-success" role="alert">
+                        Richiesta inviata correttamente. La tua attività verrà inserita il prima possibile in elenco! <b>Grazie</b>!<br/><br/>
+                        <a type="button" class="btn btn-primary" [routerLink]="['/spesa']">Torna all'elenco attività</a>
+                    </div>
+                    <div [hidden]="!error" class="alert alert-success" role="alert">
+                        Si è verificato un errore!
+                    </div>
+                </div>
+
                 </div>
             </div>
         </div>
         <!--end card-->
         
         </div>
+
     </div>
 
 </div>
