--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,7 +1,7 @@
 <div class="container my-1">
 
     <div class="row">
-        <div class="col">
+        <div class="col-sm-5">
             <h4>Casi per regione</h4>
             <ul class="nav nav-tabs auto">
                 <li class="nav-item"><a [ngClass]="{'active': showRegion}" class="nav-link" href="#" (click)="switchToRegion()">Regioni</a></li>
@@ -9,7 +9,7 @@
             </ul>
             <div id="chartdiv"></div>
         </div>
-        <div class="col-*">
+        <div class="col-sm-2">
             <h4>Numeri</h4>
             <div class="row">
                 <div class="col-sm-12">
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="col">
+        <div class="col-sm-5">
             <h4>Andamento giornaliero</h4>
             <div id="linearchart"></div>
         </div>
