--- a/src/app/maps/maps.component.scss
+++ b/src/app/maps/maps.component.scss
@@ -1,9 +1,18 @@
 #chartdiv {
 
-    height: 400px;
-  }
+  height: 400px;
+}
 
-  #linearchart {
+#linearchart {
 
-    height: 400px;
-  }
+  height: 400px;
+}
+
+#barChart {
+
+  height: 400px;
+}
+#pieChart {
+
+  height: 400px;
+}
