Aggiunto link instagram

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,13 @@
                         </svg>
                       </a>
                     </li>
+                    <li>
+                      <a href="https://www.instagram.com/restoacasa.github.io/" aria-label="Instagram" target="_blank">
+                        <svg class="icon">
+                          <use xlink:href="assets/sprite.svg#it-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
                     
                     
                   </ul>
