--- a/src/app/collabora/collabora.component.html
+++ b/src/app/collabora/collabora.component.html
@@ -17,6 +17,9 @@
                 <p >
                     Puoi trovare tutto il codice sorgente su <a href="https://github.com/grausof/iorestoacasa" target="_blank">github</a> e suggerire nuove idee sul <a href="https://join.slack.com/t/iorestoacasa/shared_invite/zt-cq04uaom-g0x4XaR1Ajw32sKP2reckg" target="_blank">slack</a>
                 </p>
+                <p >
+                    Oppure seguici sul nostro canale social <a href="https://instagram.com/restoacasa.github.io" target="_blank">instagram</a> 
+                </p>
                 </div>
             </div>
         </div>
