--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
             <div class="it-header-center-content-wrapper">
               <div class="it-brand-wrapper">
                 <a href="#">
+                  <!--<img src="assets/logo.svg" class="icon">-->
+      
                   <svg class="icon">
                     <use xlink:href="assets/sprite.svg#it-plus-circle"></use>
                   </svg>
