--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -76,13 +76,13 @@
         
     </div>
 </div>
-<!--
+
 <div class="container my-1">
     <div class="alert alert-danger" role="alert" [innerHTML]="alertMessage">
-
+    I dati di oggi 23/3/2020 verranno aggiornati in ritardo 
     </div>
 </div>
--->
+
 <div class="container my-2">
 
     <div class="row">
