--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -21,7 +21,7 @@
                     </p>
 
                     
-                    Totale positivi: <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_attualmente_positivi}} (+{{detailValue.totale_attualmente_positivi_increment}})</span><br/>
+                    Totale positivi: <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_positivi}} (+{{detailValue.totale_positivi_increment}})</span><br/>
                     Dimessi guariti: <span class="badge badge-primary badge-pill float-right">{{detailValue.dimessi_guariti}} (+{{detailValue.dimessi_guariti_increment}})</span><br/>
                     Deceduti: <span class="badge badge-primary badge-pill float-right">{{detailValue.deceduti}} (+{{detailValue.deceduti_increment}})</span><br/>
                     <b>Totale casi:</b> <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_casi}} (+{{detailValue.totale_casi_increment}})</span><br/><br/>
