Removed hardcoded "+" in increments to avoid confusion when there is a decrement. The "+" is now being added dynamically when the increment is positive

--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -20,18 +20,18 @@
                         </button>
                     </p>
 
-                    
-                    Totale positivi: <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_positivi}} (+{{detailValue.totale_positivi_increment}})</span><br/>
-                    Dimessi guariti: <span class="badge badge-primary badge-pill float-right">{{detailValue.dimessi_guariti}} (+{{detailValue.dimessi_guariti_increment}})</span><br/>
-                    Deceduti: <span class="badge badge-primary badge-pill float-right">{{detailValue.deceduti}} (+{{detailValue.deceduti_increment}})</span><br/>
-                    <b>Totale casi:</b> <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_casi}} (+{{detailValue.totale_casi_increment}})</span><br/><br/>
 
-                    Tamponi: <span class="badge badge-primary badge-pill float-right">{{detailValue.tamponi}} (+{{detailValue.tamponi_increment}})</span><br/>
-                    Terapia intensiva: <span class="badge badge-primary badge-pill float-right">{{detailValue.terapia_intensiva}} (+{{detailValue.terapia_intensiva_increment}})</span><br/>
-                    Ricoverati: <span class="badge badge-primary badge-pill float-right">{{detailValue.ricoverati_con_sintomi}} (+{{detailValue.ricoverati_con_sintomi_increment}})</span><br/>
-                    Isolamento: <span class="badge badge-primary badge-pill float-right">{{detailValue.isolamento_domiciliare}} (+{{detailValue.isolamento_domiciliare_increment}})</span><br/><br/>
-                    
-                    
+                    Totale positivi: <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_positivi}} ({{detailValue.totale_positivi_increment}})</span><br/>
+                    Dimessi guariti: <span class="badge badge-primary badge-pill float-right">{{detailValue.dimessi_guariti}} ({{detailValue.dimessi_guariti_increment}})</span><br/>
+                    Deceduti: <span class="badge badge-primary badge-pill float-right">{{detailValue.deceduti}} ({{detailValue.deceduti_increment}})</span><br/>
+                    <b>Totale casi:</b> <span class="badge badge-primary badge-pill float-right">{{detailValue.totale_casi}} ({{detailValue.totale_casi_increment}})</span><br/><br/>
+
+                    Tamponi: <span class="badge badge-primary badge-pill float-right">{{detailValue.tamponi}} ({{detailValue.tamponi_increment}})</span><br/>
+                    Terapia intensiva: <span class="badge badge-primary badge-pill float-right">{{detailValue.terapia_intensiva}} ({{detailValue.terapia_intensiva_increment}})</span><br/>
+                    Ricoverati: <span class="badge badge-primary badge-pill float-right">{{detailValue.ricoverati_con_sintomi}} ({{detailValue.ricoverati_con_sintomi_increment}})</span><br/>
+                    Isolamento: <span class="badge badge-primary badge-pill float-right">{{detailValue.isolamento_domiciliare}} ({{detailValue.isolamento_domiciliare_increment}})</span><br/><br/>
+
+
                 </div>
             </div>
             <div class="row">
@@ -61,7 +61,7 @@
             <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                
+
                     <h4>Decessi per fasce d'età</h4>
                     <div id="barChart"></div>
 
@@ -70,20 +70,20 @@
                     </div>
 
                     </div>
-  
+
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="float-left">Ultimo aggiornamento: {{lastUpdate}}</div>
-        
+
     </div>
 </div>
 <!--
 <div class="container my-1">
     <div class="alert alert-danger" role="alert" >
-    I dati di oggi 23/3/2020 verranno aggiornati in ritardo 
+    I dati di oggi 23/3/2020 verranno aggiornati in ritardo
     </div>
 </div>
 -->
